:bricks:change directory

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,11 @@ app.db
 test.db
 env
 htmlcov
-.vscode
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
