--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.104.0"
 uvicorn = "^0.23.2"
+psycopg = "^3.1.12"
+psycopg-binary = "^3.1.12"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
