--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ uvicorn = "^0.23.2"
 psycopg = "^3.1.12"
 psycopg-binary = "^3.1.12"
 psycopg2-binary = "^2.9.9"
+sqlalchemy = "^2.0.23"
 
 
 [build-system]
