--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ psycopg = "^3.1.12"
 psycopg-binary = "^3.1.12"
 psycopg2-binary = "^2.9.9"
 sqlalchemy = "^2.0.23"
+email-validator = "^2.1.0.post1"
 
 
 [build-system]
