--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ psycopg-binary = "^3.1.12"
 psycopg2-binary = "^2.9.9"
 sqlalchemy = "^2.0.23"
 email-validator = "^2.1.0.post1"
+passlib = "^1.7.4"
+bcrypt = "^4.0.1"
 
 
 [build-system]
