--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ sqlalchemy = "^2.0.23"
 email-validator = "^2.1.0.post1"
 passlib = "^1.7.4"
 bcrypt = "^4.0.1"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 
 
 [build-system]
