--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ email-validator = "^2.1.0.post1"
 passlib = "^1.7.4"
 bcrypt = "^4.0.1"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+python-multipart = "^0.0.6"
 
 
 [build-system]
