--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ bcrypt = "^4.0.1"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.6"
 pydantic-settings = "^2.1.0"
+alembic = "^1.13.1"
 
 
 [build-system]
